helm/ping-federate/ingress-pingfederate-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingfederate-admin-console-ingress-internal
  namespace: ciam-dev
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.azure.com/tls-cert-keyvault-uri: <KEYVAULT-URI>
spec:
  ingressClassName: nginx-internal
  rules:
  - host: ping-fedadmin.dev.ciam-portal.internal  # Replace with your actual domain
    http:
      paths:
      - backend:
          service:
            name: pingfederate-admin
            port:
              number: 9999
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ping-fedadmin.dev.ciam-portal.internal  # Same domain as above
    secretName: keyvault-pingfederate-admin-console-ingress-internal # Replace with the name of your TLS secret
