helm/ping-federate/ingress-pingfederate-engine.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingfederate-engine-ingress-internal
  namespace: ciam-dev
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx-internal
  rules:
  - host: ping-fedengine.dev.ciam-portal.internal # Replace with your actual domain
    http:
      paths:
      - backend:
          service:
            name: pingfederate-engine
            port:
              number: 9031
        path: /
        pathType: Prefix

  tls:
  - hosts:
    - ping-fedengine.dev.ciam-portal.internal  # Same domain as above
    secretName: ping-secret # Replace with the name of your TLS secret
